--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,10 +83,12 @@ jobs:
 
       - name: Build release
         run: |
+         cargo update -p clap_lex@0.6.0 --precise ver
           python build.py -vr all
 
       - name: Build debug
         run: |
+         cargo update -p clap_lex@0.6.0 --precise ver
           python build.py -v all
 
       # Only upload artifacts built on Linux
